updating to include group project 1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="reset.css" />
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet" />
-  <title>Portfolio of Veronica Lee</title>
+  <title>Veronica Lee's Portfolio</title>
 </head>
 <body>
 
@@ -21,7 +21,7 @@
   </nav>
 
     <h1>Veronica Lee</h1>
-    <h2>{Future} Badass Coder</h2>
+    <h2>Future Full Stack Web Developer</h2>
 
     <p>While an all-around history nerd, animal lover, home chef, and CrossFitter, 
     more specifically I am an Executive Assistant by day and coding student by night. 
@@ -33,9 +33,7 @@
       </div>
 
       <div id="gallery">
-        <a href="https://veronicorn.github.io/unit3-jsactivity30/" target=_blank><img class="scrnsht" src="activity30scrnsht.jpg" title="JavaScript Employee Directory" /></a>
-        <img class="scrnsht" src="http://via.placeholder.com/300x200" />
-        <img class="scrnsht" src="http://via.placeholder.com/300x200" />
+        <a href="http://instagramcloneproject.herokuapp.com/" target=_blank><img class="scrnsht" src="Images/InstagramClone.JPG" title="Instagram Clone Group Project" /></a>
       </div>
 
       <footer>
