Adds second group project.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <p>While an all-around history nerd, animal lover, home chef, and CrossFitter, 
     more specifically I am an Executive Assistant by day and coding student by night. 
+    I hope to bring more color and creativity to the world, and my own life, 
     [ m o r e t o c o m e ]</p>
 
     <div id="portfolio">
@@ -34,6 +35,7 @@
 
       <div id="gallery">
         <a href="http://instagramcloneproject.herokuapp.com/" target=_blank><img class="scrnsht" src="Images/InstagramClone.JPG" title="Instagram Clone Group Project" /></a>
+        <a href="https://city-search-app.herokuapp.com/" target=_blank><img class="scrnsht" src="Images/CitySearchApp.JPG" title="City Search App Group Project" /></a>
       </div>
 
       <footer>
